--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,5 +1,16 @@
-body{
-    margin: 0px;
-    text-align: center;
-    background-color: rgb(60, 22, 22);
+/* Step-4 */
+body {
+  margin: 0px;
+  text-align: center;
+  background-color: #5c245c;
+}
+
+body #layout-main {
+  height: 150%;
+  color: white;
+}
+
+body #posts-list-container {
+  font-size: 2rem;
+  text-align: left;
 }
