--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,9 @@
-<footer>
-    <h1>Footer</h1>
+<footer id="footer">
+    <div id="footer-div">
+        <h1 class="h1">&copy;All Rights By Coding Ninjas </h1>
+        <ul>
+            <li><a href="/">Home</a></li>
+                <li><a href="/users/profile">Profile</a></li>
+        </ul>
+    </div>
 </footer>
