--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%=title%></title>
+    <title>
+        <%=title%>
+    </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <%- style %>
 </head>
+
 <body>
     <%- include('_header'); %>
+        <main id="layout-main">
+            <%-body%>
+        </main>
 
-    <%-body%>
-    
-    <%- include('_footer'); %>
-<%- script %>
+        <%- include('_footer'); %>
+        
+            <%- script %>
+
+                <script>
+              <% if (flash.success && flash.success.length > 0) {%>
+                        new Noty({
+                            theme: 'sunset',
+                            text: '<%=flash.success%>',
+                            type: 'success',
+                            layout: 'topRight',
+                            timeout: 1500
+                        }).show();
+            <%}%>
+              <% if (flash.error && flash.error.length > 0) {%>
+                        new Noty({
+                            theme: 'relax',
+                            text: '<%=flash.error%>',
+                            type: 'error',
+                            layout: 'topRight',
+                            timeout: 1500
+                        }).show();
+            <%}%>
+                </script>
 </body>
+
 </html>
