--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,22 @@
+<!-- Step-3 -->
 <link rel="stylesheet" href="/css/user_profile.css">
-<h1>
-      Profile
-   </h1>
+
+
+
+<% if(user.id==profile_user.id){%>
+      <img src="<%= user.avatar %>" alt="<%=user.name%>" width="100">
+      <!-- if user matches then show the form -->
+      <form action="/users/update/<%=profile_user.id%>" enctype="multipart/form-data" method="post">
+            <input type="text" name="name" placeholder="Enter Your Name" value="<%=profile_user.name%>" required>
+            <input type="email" name="email" placeholder="Enter Your Email" value="<%=profile_user.email%>" required>
+            <input type="file" name="avatar" placeholder="Profile Picture">
+            <input type="submit" value="Update">
+      </form>
+
+      <%} else {%>
+            <!-- else show only prfile show -->
+            <p>Name:- <%= profile_user.name%>
+            </p>
+            <p>Email:- <%= profile_user.email%>
+            </p>
+            <%}%>
